package state.atm;

public interface ATM_State {
    void xuLyNapTien(ATM atm, int soTien);
    void xuLyRutTien(ATM atm);
}
